[metadata]
name = aia-utilities
version = 0.1.10
description = Small utilities for Redis
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = surgelove
author_email = 
url = https://github.com/surgelove/aia_utilities
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    redis>=4.0

[options.packages.find]
where = src
